--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,6 +18,10 @@ Version: 1.0
     padding: 1%;
 }
 
+.clearfix {
+    margin: auto;
+}
+
 .clearfix:after {
     content: " ";
     visibility: hidden;
@@ -139,7 +143,7 @@ Version: 1.0
 
 .dash-tile {
     width: 21%;
-    background-color: #E65D5D;
+    background-color: #4f4d4d;
     color: #FFFFFF;
     margin: 1%;
     padding: 5% 1%;
@@ -150,7 +154,7 @@ Version: 1.0
 }
 
 .dash-tile:hover {
-    box-shadow: 0 0 5px 1px black;
+    box-shadow: 0 0 5px 3px black;
 }
 
 .success {
