--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Signika:wght@600&display=swap');
+
 * {
     margin: 0 0;
     padding: 0 0;
-    font-family: arial, sans-serif;
+    font-family: 'Signika', sans-serif;
     line-height: 25px;
 }
 
@@ -527,7 +529,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Signika', sans-serif;
 }
 
 body {
